# binarydrop

./: Cargo.toml  README.md  db.sqlite  deploy.sh
.sqlx/: query-3b12010bb09b80e31ba89414f6d50f206683c310d986a1a29c83861a673dc23b.json  query-46de6e2008f7cd3608295d3e911d3f117701e6137fc275e87a6fd82acfb16a54.json  query-584139f0e95db3b3b59729265146b0ff733cd922e18f378d7c5b8c38bba54c23.json  query-7ad48be5d0b3be9f28f5e9cb3aefc83687af0b2f3c1c7bb04cade2546a569789.json  query-a9e6d14969f9bfba8db1b3390d1be4860ba405d63287d88c2afa40a3a31adb5f.json  query-b926d4bb1be65ab3b968ab2c89aefe120b8b5aeb96ec4de659ecd71e6baa2291.json  query-deb079855479aba3f67215c472bd6e515f9bc4691c8b430f5ab70781e3ffcf7f.json  query-e40d1c0b6ad998300fea99e10aec1d40abe865e0834f40c15238905fc3c5e463.json  query-f5a230273e3f141f0c0d7c1fe7f5472132e96a655a89d10c6a0a570fffe8a1b0.json  query-fa8f30b9345fba6733cfd789001dd94a2ce2a60863e1fe280817daf632436fcc.json  query-fc1cb325d601866d7eb3fee9a12aa3755c89a31968e9272eac406896adaa4254.json
migrations/: 20250403_initial.sql  20250406172506_add_process_fields_to_app.sql
src/: api.rs  api_client.rs  cli.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs  supervisor.rs  supervisor2.rs
src/commands/: mod.rs
src/commands/app_command/: app_env.rs  create.rs  delete.rs  deploy.rs  health_check.rs  logs.rs  mod.rs  restart.rs  start.rs  status.rs  stop.rs
src/commands/server_command/: mod.rs  serve.rs
src/providers/: cmd.rs  mod.rs
src/tests/: api_deploy_test.rs  mod.rs  test_utils.rs
