[package]
name = "bindrop"
version = "0.1.0"
edition = "2021"
description = "A platform for deploying and running statically linked binaries"
authors = ["Dan Bruder <danbruder@hey.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "time"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper-rustls = "0.24"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", default-features=false, features = ["json", "rustls-tls", "stream", "multipart"] }
async-trait = "0.1"
thiserror = "1.0"
which = "4.4"
tempfile = "3.9"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
toml = "0.8"
config = "0.13"
sha2 = "0.10"
hex = "0.4"
once_cell = "1.21.3"
prettytable = "0.10.0"
axum = { version = "0.6", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
hyper = { version = "0.14", features = ["full"] }
hyper-reverse-proxy = "0.5.1"
http = "0.2"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
bytes = "1"

[[bin]]
name = "bindrop"
path = "src/main.rs"

[features]
default = []
vendored-openssl = []
